removed unico from exclusivamente

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
         <div class="footer-bubble">
             <div class="footer-subtitle">Quem controla?</div>
-            <div class="footer-content">Atualmente, quem tem o domínio e controle sobre o website Extragabarito é único e exclusivamente o criador, Pedro Aquino. Além disso, é importante ressaltar que o site não tem qualquer vínculo, legal ou não, com a instituição Colégio Santo Agostinho como um todo. O Extragabarito é mantido e financiado por uma única pessoa, Pedro Aquino.</div>
+            <div class="footer-content">Atualmente, quem tem o domínio e controle sobre o website Extragabarito é exclusivamente o criador, Pedro Aquino. Além disso, é importante ressaltar que o site não tem qualquer vínculo, legal ou não, com a instituição Colégio Santo Agostinho como um todo. O Extragabarito é mantido e financiado por uma única pessoa, Pedro Aquino.</div>
         </div>
         <div class="footer-title">Perguntas Frequentes</div>
         <div class="footer-bubble">
