added the presencial 2 value

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <div class="selection-wrapper">
                         <select name="simulado-selection" id="simulado-selection" onchange="selectionSetup()">
                             <option value="presencial1">1º Simulado - Humanas</option>
+                            <option value="presencial2">1º Simulado - Exatas</option>
                         </select>
                         <div class="message-iio">Gabarito</div>
                     </div>
