another set of portuguese connections

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="footer-title">Perguntas Frequentes</div>
         <div class="footer-bubble">
             <div class="footer-subtitle">Quem fornece os gabaritos ao site?</div>
-            <div class="footer-content"><p>Gabaritos considerados Extraoficiais são gabaritos construídos a partir das respostas disponíveis na internet, geralmente postados algumas horas depois do simulado acontecer.</p><p>Já os Gabaritos Oficiais são gabaritos veiculados pelos meios oficiais de comunicacão do Colégio, e são 100% precisos. Os Oficiais são postados alguns dias depois do simulado acontecer.</p><p><b>Todos os gabaritos estão sujeitos a alterações.</b></p></div>
+            <div class="footer-content"><p>Gabaritos considerados Extraoficiais são gabaritos construídos a partir das respostas disponíveis na internet, geralmente postados algumas horas depois do simulado acontecer.</p><p>Já os Gabaritos Oficiais são gabaritos veiculados pelos meios oficiais de comunicacão do Colégio e são 100% precisos. Os Oficiais são postados alguns dias depois do simulado acontecer.</p><p><b>Todos os gabaritos estão sujeitos a alterações.</b></p></div>
         </div>
         <div class="footer-bubble">
             <div class="footer-subtitle">O Extragabarito sabe quem sou eu?</div>
@@ -81,7 +81,7 @@
         </div>
         <div class="footer-bubble">
             <div class="footer-subtitle">O Extragabarito guarda minhas respostas?</div>
-            <div class="footer-content">O processo de verificacão das respostas acontece todo no seu dispositivo. Não temos acesso nenhum a nenhuma informação dos usuários.</div>
+            <div class="footer-content">O processo de verificacão das respostas acontece todo no seu dispositivo. Não temos acesso a nenhuma informação dos usuários.</div>
         </div>
         <div class="footer-title">Contato</div>
         <div class="footer-bubble" id="contato-bubble">
