--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <div class="check-display-types">
                     <div class="selection-wrapper">
                         <select name="simulado-selection" id="simulado-selection" onchange="selectionSetup()">
+                            <option value="sas1">1º SAS - Humanas</option>
                             <option value="presencial2">1º Simulado - Exatas</option>
                             <option value="presencial1">1º Simulado - Humanas</option>
                         </select>
