--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="script.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <header>
     <div class="logo-container">
@@ -27,13 +28,42 @@
 </header>
 <body>
     <div id="body-wrapper">
+        <div class="heading-expanded hidden-content-onconfer">
+            <button class="hidden-content-onconfer comeback-btn" disabled onclick="rescindAnswers()">
+                <svg id="chevron-back" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"/></svg>
+            </button>
+            <button class="hidden-content-important download-report-top" disabled>
+                <p>Salvar relatório</p>
+                <svg id="download-icon" xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><g><rect fill="none" height="24" width="24"/></g><g><path d="M18,15v3H6v-3H4v3c0,1.1,0.9,2,2,2h12c1.1,0,2-0.9,2-2v-3H18z M17,11l-1.41-1.41L13,12.17V4h-2v8.17L8.41,9.59L7,11l5,5 L17,11z"/></g></svg>
+            </button>
+        </div>
+        <div class="heading-rescind hidden-content-forward">
+            <button class="forward-check-again" onclick="alterPreGame()">
+                <p>Conferir</p>
+                <svg id="confer-icon" xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><rect fill="none" height="24" width="24"/><path d="M16.95,10.23l-5.66,5.66c-0.39,0.39-1.02,0.39-1.41,0l-2.83-2.83c-0.39-0.39-0.39-1.02,0-1.41l0,0 c0.39-0.39,1.02-0.39,1.41,0l2.12,2.12l4.95-4.95c0.39-0.39,1.02-0.39,1.41,0l0,0C17.34,9.21,17.34,9.84,16.95,10.23z M4,12 c0-2.33,1.02-4.42,2.62-5.88l1.53,1.53C8.46,7.96,9,7.74,9,7.29V3c0-0.28-0.22-0.5-0.5-0.5H4.21c-0.45,0-0.67,0.54-0.35,0.85 L5.2,4.7C3.24,6.52,2,9.11,2,12c0,4.75,3.32,8.73,7.76,9.75c0.63,0.14,1.24-0.33,1.24-0.98v0c0-0.47-0.33-0.87-0.79-0.98 C6.66,18.98,4,15.8,4,12z M22,12c0-4.75-3.32-8.73-7.76-9.75C13.61,2.11,13,2.58,13,3.23v0c0,0.47,0.33,0.87,0.79,0.98 C17.34,5.02,20,8.2,20,12c0,2.33-1.02,4.42-2.62,5.88l-1.53-1.53C15.54,16.04,15,16.26,15,16.71V21c0,0.28,0.22,0.5,0.5,0.5h4.29 c0.45,0,0.67-0.54,0.35-0.85L18.8,19.3C20.76,17.48,22,14.89,22,12z"/></svg>
+            </button>
+            <button class="forward-btn" onclick="formForward()">
+                <svg id="chevron-forward" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"/></svg>
+            </button>
+        </div>
         <div class="check-heading">
             <div class="check-title">Conferir gabarito</div>
             <div class="check-subtitle">Tenha acesso ao gabarito extraoficial, na hora que quiser.</div>
             <div class="check-signature"><div>Desenvolvido por <b>Pedro Aquino</b></div></div>
         </div>
+        <div class="information-handler" style="display: none; visibility: hidden;"></div>
+        <div class="forward-handler hidden-content-important" id="parallel-wrapper">
+            <div class="parallel-heading"></div>
+            <div class="parallel-handler hidden-content-important"></div>
+            <div id="parallel-display"></div>
+        </div>
         <div class="check-display">
-            <div class="check-removable">
+            <div id="check-removable">
+                <div class="removable-cover"></div>
+                <button class="see-more-unleash" onclick="unleashQuestions()" id="unleashTrigger">
+                    Ver Mais
+                    <svg id="chevron-down" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6z"/></svg>
+                </button>
                 <div class="check-display-title">INSIRA SEU GABARITO</div>
                 <div class="check-display-types">
                     <div class="selection-wrapper">
