added second gabarito exatas

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 <div class="check-display-types">
                     <div class="selection-wrapper">
                         <select name="simulado-selection" id="simulado-selection" onchange="selectionSetup()">
+                            <option value="presencial4">2º Simulado - Exatas</option>
                             <option value="presencial3">2º Simulado - Humanas</option>
                             <option value="presencial2">1º Simulado - Exatas</option>
                             <option value="presencial1">1º Simulado - Humanas</option>
