--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="check-display-types">
                     <div class="selection-wrapper">
                         <select name="simulado-selection" id="simulado-selection" onchange="selectionSetup()">
-                            <option value="SAS2">SAS Presencial - Humanas</option>
+                            <option value="SAS2">SAS Presencial - Humanas (Inglês)</option>
                             <option value="presencial4">2º Simulado - Exatas</option>
                             <option value="presencial3">2º Simulado - Humanas</option>
                             <option value="presencial2">1º Simulado - Exatas</option>
