prepared for the oficial 2

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="check-display-types">
                     <div class="selection-wrapper">
                         <select name="simulado-selection" id="simulado-selection" onchange="selectionSetup()">
-                            <option value="presencial5">3º Simulado - Humanas</option>
+                            <!-- <option value="presencial5">3º Simulado - Humanas</option> -->
                             <option value="SAS3">SAS Presencial - Exatas</option>
                             <option value="SAS2">SAS Presencial - Humanas (Inglês)</option>
                         </select>
