added presencial 6 cinza

--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
                 <div class="check-display-types">
                     <div class="selection-wrapper">
                         <select name="simulado-selection" id="simulado-selection" onchange="selectionSetup()">
+                            <option value="presencial6Cinza">3º Simulado - Exatas (Cinza)</option>
                             <option value="presencial5">3º Simulado - Humanas</option>
-                            <option value="SAS3">SAS Presencial - Exatas</option>
-                            <option value="SAS2">SAS Presencial - Humanas (Inglês)</option>
                         </select>
                     </div>
                     <input type="submit" value="Conferir" id="top-submission" form="check-answers-form"></input>
