added presencial 6 branca error

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 <div class="check-display-types">
                     <div class="selection-wrapper">
                         <select name="simulado-selection" id="simulado-selection" onchange="selectionSetup()">
+                            <option value="presencial6Branca">3º Simulado - Exatas (Branca)</option>
                             <option value="presencial6Cinza">3º Simulado - Exatas (Cinza)</option>
                             <option value="presencial5">3º Simulado - Humanas</option>
                         </select>
