added the possibility to correct sas 3 humanas

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="check-heading">
             <div class="check-title">Conferir gabarito</div>
             <div class="check-subtitle">Tenha acesso ao gabarito extraoficial, na hora que quiser.</div>
-            <div class="check-signature"><div>Desenvolvido por <b>Pedro Aquino</b></div></div>
+            <div class="check-signature"><div>www.facull.net</div></div>
         </div>
         <div class="information-handler" style="display: none; visibility: hidden;"></div>
         <div class="forward-handler hidden-content-important" id="parallel-wrapper">
@@ -68,9 +68,10 @@
                 <div class="check-display-types">
                     <div class="selection-wrapper">
                         <select name="simulado-selection" id="simulado-selection" onchange="selectionSetup()">
+                            <option value="sas5ING">3º SAS - Humanas (ING)</option>
+                            <option value="sas5ESP">3º SAS - Humanas (ESP)</option>
                             <option value="presencial6Branca">3º Simulado - Exatas (Branca)</option>
                             <option value="presencial6Cinza">3º Simulado - Exatas (Cinza)</option>
-                            <option value="presencial5">3º Simulado - Humanas</option>
                         </select>
                     </div>
                     <input type="submit" value="Conferir" id="top-submission" form="check-answers-form"></input>
