--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="check-heading">
             <div class="check-title">Conferir gabarito</div>
             <div class="check-subtitle">Tenha acesso ao gabarito extraoficial, na hora que quiser.</div>
-            <div class="check-signature"><div>www.facull.net</div></div>
+            <div class="check-signature"><div>Conheça www.facull.net</div></div>
         </div>
         <div class="information-handler" style="display: none; visibility: hidden;"></div>
         <div class="forward-handler hidden-content-important" id="parallel-wrapper">
