--- a/index.html
+++ b/index.html
@@ -68,10 +68,9 @@
                 <div class="check-display-types">
                     <div class="selection-wrapper">
                         <select name="simulado-selection" id="simulado-selection" onchange="selectionSetup()">
+                            <option value="sas6">3º SAS - Exatas</option>
                             <option value="sas5ING">3º SAS - Humanas (ING)</option>
                             <option value="sas5ESP">3º SAS - Humanas (ESP)</option>
-                            <option value="presencial6Branca">3º Simulado - Exatas (Branca)</option>
-                            <option value="presencial6Cinza">3º Simulado - Exatas (Cinza)</option>
                         </select>
                     </div>
                     <input type="submit" value="Conferir" id="top-submission" form="check-answers-form"></input>
