--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="language" content="pt-BR">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confere meu gabarito!</title>
         <!-- Global site tag (gtag.js) - Google Analytics -->
